--- a/LibraryManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                          <li class="nav-item">
                              <a class="nav-link" asp-controller="Book" asp-action="Index">Books</a>
                          </li>
+                         <li class="nav-item">
+                             <a class="nav-link" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                         </li>
                     </ul>
                 </div>
             </div>
