--- a/LibraryManagementSystem/Views/_ViewImports.cshtml
+++ b/LibraryManagementSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using LibraryManagementSystem
 @using LibraryManagementSystem.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.Globalization
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Localization
+@inject IViewLocalizer Localizer
+
