translation(done)+all logic done

--- a/LibraryManagementSystem/Views/Book/Edit.cshtml
+++ b/LibraryManagementSystem/Views/Book/Edit.cshtml
@@ -54,5 +54,5 @@
             <small class="form-text text-muted">No image selected.</small>
         }
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary" id="Save">Save</button>
 </form>
