--- a/LibraryManagementSystem/Views/Book/Create.cshtml
+++ b/LibraryManagementSystem/Views/Book/Create.cshtml
@@ -59,5 +59,5 @@
         <input type="file" class="form-control" id="Image" name="image" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Create Book</button>
+    <button type="submit" id="CreateBook" class="btn btn-primary">Create Book</button>
 </form>
