--- a/LibraryManagementSystem/Views/Book/Details.cshtml
+++ b/LibraryManagementSystem/Views/Book/Details.cshtml
@@ -5,7 +5,7 @@
         @TempData["SuccessMessage"]
     </div>
 }
-<h2>Book Details</h2>
+<h2 id="=BookDetails">Book Details</h2>
 
 <div>
     <h3>@Model.Title</h3>
@@ -25,11 +25,11 @@
 <form method="post" asp-action="Sell" asp-route-id="@Model.Id">
     @if (Model.Status != "Sold")
     {
-        <button type="submit" class="btn btn-danger">Sell</button>
+        <button type="submit" id="Sell" class="btn btn-danger">Sell</button>
     }
     else
     {
-        <button class="btn btn-secondary" disabled>Sold</button>  <!-- Display a disabled button if the book is already sold -->
+        <button class="btn btn-secondary" id="Sold"disabled>Sold</button>  <!-- Display a disabled button if the book is already sold -->
     }
 </form>
 @if (Model.Status != "Sold" && Model.Status != "Rented") 
@@ -39,19 +39,19 @@
             <label for="rentalDuration">Rental Duration (in days)</label>
             <input type="number" id="rentalDuration" name="rentalDuration" class="form-control" min="1" required />
         </div>
-        <button type="submit" class="btn btn-primary">Rent</button>
+        <button type="submit" id="Rent" class="btn btn-primary">Rent</button>
     </form>
 }
 else
 {
-    <button class="btn btn-secondary" disabled>Unavailable for Rent</button>  <!-- Display a disabled button if the book is rented or sold -->
+    <button class="btn btn-secondary" id="UnavailableForRent"disabled>Unavailable for Rent</button>  <!-- Display a disabled button if the book is rented or sold -->
 }
 @if (Model.Status == "Rented")
 {
     <form method="post" asp-action="Return" asp-route-id="@Model.Id">
-        <button type="submit" class="btn btn-warning">Return Book</button>
+        <button type="submit"id="ReturnBook" class="btn btn-warning">Return Book</button>
     </form>
 }
 
 
-<a href="@Url.Action("Index", "Book")" class="btn btn-secondary">Back to List</a>
+<a href="@Url.Action("Index", "Book")" class="btn btn-secondary" id="BackToList">Back to List</a>
