--- a/LibraryManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/_Layout.cshtml
@@ -20,9 +20,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                       
                         
                          <li class="nav-item">
                              <a class="nav-link"id="Books" asp-controller="Book" asp-action="Index">Books</a>
@@ -31,6 +29,8 @@
                              <a class="nav-link" id="Dashboard" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
                          </li>
                           <li class="nav-item">
+                            <button onclick="changeLanxD('en')">English</button>
+                            <button onclick="changeLanxD('ar')">Arabic</button>
                  
                          </li>
                     </ul>
