--- a/LibraryManagementSystem/Views/Book/Edit.cshtml
+++ b/LibraryManagementSystem/Views/Book/Edit.cshtml
@@ -1,6 +1,10 @@
 @model LibraryManagementSystem.Models.Book
 <style>
-     
+        html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
         /* Apply a background image to the body */
         body {
             background-image: url('/images/edit.jpg'); /* Update the path to match your image location */
@@ -22,6 +26,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
              color: darkgoldenrod !important;
         }
+
 </style>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
